2004-04-19  Tomasz Kłoczko <kloczek@pld.org.pl>

	* docs/sql/Makefile.am: updated EXTRA_DIST files list.

2004-04-19  Mikael Hallendal  <micke@imendio.com>

	* src/planner-resource-dialog.c:
	(resource_dialog_email_changed_cb): fixed mem-leak.

2004-04-17  Alvaro del Castillo  <acs@barrapunto.com>

	* src/planner-group-dialog.c: better memory handling.
	* src/planner-resource-dialog.c: undo using focus in/focus out.
	Maybe we use the focus out to change values in planner so this
	could change in the future.
	Implemented "_free" functions for undo system.
	* src/planner-resource-view.c: better memory handling.
	Implemented "_free" functions for undo system.
	
2004-04-17  Richard Hult  <richard@imendio.com>

	* libplanner/mrp-sql.c: (mrp_sql_save_project):
	* src/planner-sql-plugin.c: (sql_plugin_retrieve_project_id):
	Handle errors (such as no database server running) better.

2004-04-17  Richard Hult  <richard@imendio.com>

	* libplanner/mrp-task-manager.c (task_manager_do_forward_pass):
	Notify duration changes. Fixes bug #140324.

	* src/planner-window.c (window_get_name): Don't show database
	details such as password.
	(window_confirm_exit_run): Hack for now that removes the save
	button for database projects.

	* data/glade/sql.glade:
	* libplanner/mrp-sql.c: (sql_read_resources):
	* src/planner-sql-plugin.c: (sql_plugin_retrieve_project_id): Fix
	bug #136507, based on patch from Lincoln with further work from
	me.

2004-04-17  Setul Patel   <setulkumarpatel@yahoo.com>

	* data/ui/main-window.ui:
	* src/planner-window.c: Fix bug #134357.

2004-04-17  Alvaro del Castillo  <acs@barrapunto.com>

	* src/planner-task-tree.c: Undo code for task constraints, task
	movement and task indentation.

2004-04-16  Richard Hult  <richard@imendio.com>

	* src/planner-gantt-row.c: (gantt_row_get_bounds),
	(gantt_row_draw), (gantt_row_point): Fix bug #137581.

2004-04-16  Richard Hult  <richard@imendio.com>

	* data/stylesheets/Makefile.am:
	* data/stylesheets/html1_css.xsl: